Version 3.9.25
- Accept old-style C function declarations
- Unrolled LMM loop some more, for about a 10% performance improvement on code outside of fcache.
- Added --lmm=xxx flag to change LMM interpreter (for test purposes only, really)
- Changed runtime support code to avoid using CNT shadow register (for GEAR emulator compatibility)
- Added warnings for missing # on jumps

Version 3.9.24
- Fixed a crash when enums are declared in structs
- On P2 use --fcache=240 when -O2 is passed
- Automatically search for .spin2 extensions first, then .spin ones in Spin OBJ blocks if no explicit file name extension is given.
- Suppress some spurious warnings about orgh in listing files
- Fixed a Spin problem with function calls inside method reference lookups
- Fixed a problem where constant references within strings were evaluated in the wrong context
- Allow Spin code to use any variable as an array

Version 3.9.23
- Caught some cases where function redefinitions were not flagged as errors
- Fixed an optimizer crash when inlining functions containing REP
- Fixed rep count calculation when an augment is needed for large immediate repetitions
- Implemented work-around in CLKSET for RCFAST setting issue
- Allow fcache on P2; must be explicitly enabled though
- Fixed filename extension bug in C/C++ output
- Fixed C++ output for the serial printf functions
- Fixed some problems with output of method calls in spin2cpp output
- Changed the way @@@ relocation is done, and made some P2
  instructions use it so that HUB references work even if there are
  Spin methods present.
- Allow Unicode characters above 0x7f in PASM expressions
- When parsing a UCS-16 file without a preprocessor, convert characters to UTF-8

Version 3.9.22
- Made sure C enums start at 0
- Do not change the order of class declarations, so that sizes can be
  properly calculated
- Always put array variables on the stack
- Fixed some type promotion problems in C